# Spark-DataLake-Udacity

./: .gitignore  README.md  etl.ipynb  etl.py  pyproject.toml  requirements.txt  trials.ipynb
