[tool.poetry]
name = "spark-project"
version = "0.1.0"
description = ""
authors = ["Hazem Khairy <hazem.hassan.kh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
pyspark = "^3.3.0"




[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
